--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,9 @@ label
 }
 
 h3{
-  margin-top: 30%;
+  margin-top: 28%;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 button.hidden{
@@ -27,4 +29,9 @@ button.hidden{
 
 button.btn:hover{
   background-color:#00dddd;
+}
+
+div.hidden{
+  border:1px solid black;
+  background-color: white;
 }
