--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,9 @@ background-color:#3279b6;
 background-color:#ddddff;
 }
 
+.dontknow{
+  background-image: url("../img/bg.jpg");
+}
 .container{
   background-color: #eeeeee;
 }
