--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ button.hidden{
 }
 
 button.btn:hover{
-  background-color:#00dddd;
+  background-color:#00ddee;
 }
 
 div.well{
@@ -37,7 +37,7 @@ div.well{
 }
 
 button.hidden:hover{
-  background-color:#00dddd;
+  background-color:#00ddee;
 }
 
 .purple{
